backup/iptables
# Generated by iptables-save v1.4.21 on Tue Jan 17 12:13:35 2023
*filter
:INPUT DROP [104:6387]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [134:69925]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8080 -j ACCEPT
COMMIT
# Completed on Tue Jan 17 12:13:35 2023
# Generated by iptables-save v1.4.21 on Tue Jan 17 12:13:35 2023
*nat
:PREROUTING ACCEPT [163:14662]
:INPUT ACCEPT [28:2591]
:OUTPUT ACCEPT [27:1768]
:POSTROUTING ACCEPT [27:1768]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Tue Jan 17 12:13:35 2023
